# axiompy-agents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  PRODUCTION_READINESS_PLAN.md  PUBLIC_REPO_HYGIENE_PLAN.md  README.md  pyproject.toml
.github/workflows/: README.md  code-review-agent-deploy.yml  python-ci.yml
axiompy/: __init__.py
axiompy/agents/: README.md  __init__.py
axiompy/agents/code_review/: Makefile  README.md  __init__.py  defaults.py  factory.py
axiompy/agents/code_review/adapters/: __init__.py
axiompy/agents/code_review/adapters/analyzers/: __init__.py  analyzer.py
axiompy/agents/code_review/adapters/publishers/: __init__.py  console.py  github.py  json.py
axiompy/agents/code_review/adapters/rules/: __init__.py  file.py  github.py  mock.py
axiompy/agents/code_review/adapters/sources/: __init__.py  filesystem.py  git.py  github.py  mock.py
axiompy/agents/code_review/application/: __init__.py
axiompy/agents/code_review/applications/: __init__.py  cli.py  library.py  webhook.py
axiompy/agents/code_review/docker/: .env.example  Dockerfile  docker-compose.yml
axiompy/agents/code_review/domain/: __init__.py  engine.py  models.py  ports.py  results.py  rules.py  service.py
axiompy/agents/code_review/terraform/: README.md
axiompy/agents/code_review/terraform/aws/: .gitignore  alb.tf  ecs.tf  gpu.tf  iam.tf  main.tf  outputs.tf  security.tf  storage.tf  terraform.tfvars.example  variables.tf  vpc.tf
axiompy/agents/examples/: minimal_kernel.py
axiompy/agents/io/: README.md  __init__.py  defaults.py  errors.py  mocks.py  ports.py  secrets_loader.py  settings.py  sql_identifiers.py  types.py
axiompy/agents/io/documents/: __init__.py  chunker.py  database.py  filesystem.py  object_store.py  pdf.py  url.py
axiompy/agents/io/embeddings/: __init__.py  fastembed_embedder.py  ollama.py  openai.py  sentence_transformer.py
axiompy/agents/io/vector/: __init__.py  chroma.py  memory.py  pgvector.py  pinecone.py
axiompy/agents/models/: README.md
axiompy/agents/rag/: README.md  __init__.py  factory.py
axiompy/agents/rag/adapters/: __init__.py  mocks.py
axiompy/agents/rag/adapters/embedders/: __init__.py  fastembed_embedder.py  ollama.py  openai.py  sentence_transformer.py
axiompy/agents/rag/adapters/llm/: __init__.py  reasoning_adapter.py
axiompy/agents/rag/adapters/sources/: __init__.py  database.py  filesystem.py  object_store.py  pdf.py  url.py
axiompy/agents/rag/adapters/vector_stores/: __init__.py  chroma.py  memory.py  pgvector.py  pinecone.py
axiompy/agents/rag/applications/: __init__.py  api.py  cli.py
axiompy/agents/rag/domain/: __init__.py  chunker.py  models.py  ports.py  service.py
axiompy/kernel/: README.md  __init__.py  factory.py  settings.py  types.py
axiompy/kernel/adapters/checkpoints/: in_memory.py
axiompy/kernel/adapters/coordinator/: sequential.py
axiompy/kernel/adapters/events/: in_memory.py
axiompy/kernel/adapters/frameworks/: langchain_runtime.py  langgraph_runtime.py
axiompy/kernel/adapters/llm/: mock.py
axiompy/kernel/adapters/memory/: in_memory.py  redis_store.py
axiompy/kernel/adapters/tools/: simple_registry.py
axiompy/kernel/domain/: __init__.py  errors.py  models.py  ports.py  service.py
axiompy/kernel/runtime/: native.py
axiompy/reasoning/: README.md  __init__.py  adapter.py  base.py  client.py  factory.py  llm_provider_adapter.py  metadata.py  metadata_helpers.py  prompts.py  rag_llm_adapter.py  secrets_loader.py  settings.py  types.py  validators.py
axiompy/reasoning/agents/: __init__.py  feedback.py  query.py  sql_generator.py  validation_pipeline.py
axiompy/reasoning/datasets/: __init__.py  arrow_service.py
axiompy/reasoning/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
tests/: conftest.py  test_axiompy_leverage.py  test_code_review.py  test_kernel.py  test_rag.py  test_reasoning_adapter.py  test_reasoning_client.py  test_reasoning_coverage.py  test_reasoning_metadata.py  test_reasoning_phase2.py  test_reasoning_providers.py
tests/io/: test_io.py
