[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "axiompy-agents"
version = "3.1.0"
description = "Hexagonal agent kernel, IO primitives, and reasoning for AxiomPy"
readme = "README.md"
license = "MIT"
authors = ["Jorge Varona <varonusmaximus@users.noreply.github.com>"]
keywords = ["agents", "kernel", "llm", "reasoning", "axiompy"]
packages = [{ include = "axiompy" }]

[tool.poetry.dependencies]
python = ">=3.12"
# PyPI only has axiompy 0.2.x; use Git until 2.0 is published.
axiompy = { git = "https://github.com/varonusmaximus/axiompy.git", rev = "281bb0f", extras = [
    "http",
    "databases",
    "storage",
] }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"

[project]
name = "axiompy-agents"
version = "3.1.0"
description = "Hexagonal agent kernel, IO primitives, and reasoning for AxiomPy"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jorge Varona", email = "varonusmaximus@users.noreply.github.com" }]
# PyPI only has axiompy 0.2.x; pin Git until 2.0 is published (then use >=2.0.0,<3.0.0).
dependencies = [
    # sqlparse is transitive via axiompy for SQL validation in reasoning.
    "axiompy[http,databases,storage] @ git+https://github.com/varonusmaximus/axiompy.git@281bb0f",
]

[project.urls]
Repository = "https://github.com/varonusmaximus/axiompy-agents"
Documentation = "https://github.com/varonusmaximus/axiompy-agents#readme"

[project.optional-dependencies]
kernel = []
memory-redis = ["redis>=5.0"]
io-rag = [
    "numpy>=1.24.0,<2.0",
    "chromadb>=0.4.0",
    "fastembed>=0.3.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.53.0",
    "pypdf>=4.0.0",
    "psycopg2-binary>=2.9.0",
]
kernel-langgraph = ["langgraph>=0.2.0"]
kernel-langchain = ["langchain-core>=0.3.0"]
test-all = [
    "numpy>=1.24.0,<2.0",
    "chromadb>=0.4.0",
    "fastembed>=0.3.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.53.0",
    "pypdf>=4.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "moto>=4.0.0",
    "psycopg2-binary>=2.9.0",
]
# Backward-compatible alias
rag = [
    "numpy>=1.24.0,<2.0",
    "chromadb>=0.4.0",
    "fastembed>=0.3.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.53.0",
    "pypdf>=4.0.0",
    "psycopg2-binary>=2.9.0",
]
reasoning-data = [
    "axiompy-data @ git+https://github.com/varonusmaximus/axiompy-data.git@main",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["axiompy"]

[tool.ruff]
target-version = "py312"
line-length = 100
